force-app/main/default/objects/WS_Log__c/WS_Log__c.object-meta.xml
<CustomObject>
    <description>Permet de logger les call out qui ont été mis en place sur Salesforce</description>
    <label>WS Log</label>
    <nameField>
        <displayFormat>WS-{0000000000}</displayFormat>
        <label>WS Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WS Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>