force-app/main/default/objects/WS_Log__c/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <label>Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call In</fullName>
            </value>
            <value>
                <fullName>Call out</fullName>
            </value>
            <value>
                <fullName>Call out - Authentification</fullName>
            </value>
            <value>
                <fullName>Call out - Search Documents</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>