force-app/main/default/objects/WS_Log__c/fields/Reservation__c.field-meta.xml
<CustomField>
    <fullName>Reservation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reservation</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>WS Logs</relationshipLabel>
    <relationshipName>WS_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>