force-app/main/default/objects/WS_Log__c/fields/Return_Body__c.field-meta.xml
<CustomField>
    <fullName>Return_Body__c</fullName>
    <label>Return Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>