force-app/main/default/objects/WS_Log__c/fields/Return_Status__c.field-meta.xml
<CustomField>
    <fullName>Return_Status__c</fullName>
    <label>Return Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>