force-app/main/default/objects/WS_Log__c/fields/Send_Body__c.field-meta.xml
<CustomField>
    <fullName>Send_Body__c</fullName>
    <label>Send Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>