force-app/main/default/objects/WS_Log__c/fields/WS_Log_Label__c.field-meta.xml
<CustomField>
    <fullName>WS_Log_Label__c</fullName>
    <label>WS Log Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>